[package]
name = "diskcpy"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
	"Win32_System_Ioctl",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1